# Face-Recognition-System

./: .gitignore  CMakeLists.txt  README.md  face_detector.py  face_recognizer.py  main.py
src/: FaceDetector.cpp  FaceDetector.h  FaceRecognizer.cpp  FaceRecognizer.h  main.cpp
